# pdf_extractor

./: .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  README.md  article.txt  config.py  main.py  requirements.txt  setup.cfg  setup.py
.github/workflows/: pylint.yml
instance/: config.py
pdfextractor/: __init__.py  router.py
pdfextractor/common/: base.py
pdfextractor/controllers/: ApiController.py  PagesController.py  api_controller.py
pdfextractor/models/: ArticleModel.py  FileModel.py  MessageModel.py  article_model.py  message_model.py
pdfextractor/templates/: index.html
tests/: client.py  conftest.py  main_test.py  test_ApiController.py  test_PagesController.py  test_api_controller.py  test_factory.py  test_router.py
