[metadata]
name = pdfextractor
version = 1.0.0
url = https://gitlab-student.centralesupelec.fr/jonathan.cassaing/pdfextractor
license = MIT
description = Tool for parsing and extracting PDF file content
long_description = file: README.md
long_description_content_type = text/md

[options]
packages = find:
include_package_data = true
install_requires =
    Flask
    SQLAlchemy
    PyPDF2
    pdftotext

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    pdfextractor
